--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -13,6 +13,12 @@ dependencies:
 
   cupertino_icons: ^1.0.2
 
+  firebase_core: ^1.0.4
+  firebase_auth: ^1.1.1
+  cloud_firestore: ^1.0.6
+
+  modal_progress_hud: ^0.1.3
+
 dev_dependencies:
   flutter_test:
     sdk: flutter
